--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ ul {
 }
 
 .container {
-    width: 1200px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
@@ -30,17 +30,22 @@ nav {
     font-size: 25px;
     color: #fff;
     text-decoration: none;
+    display: inline-block;
 }
 .nav-main {
     display: flex;
     justify-content: space-between;
+}
+.menu-icon {
+    display: none;
+    color: #fff;
 }
 .menu ul {
     display: flex;
 }
 .menu ul li a {
     padding: 0 20px;
-    display: block;
+    display: inline-block;
     text-decoration: none;
     transition: 0.5s;
     position: relative;
@@ -65,6 +70,21 @@ nav {
 }
 .menu ul li a:hover::after {
     transform: scale(1);
+}
+
+.menu-visible {
+    transform: scale(1) !important;
+    -webkit-transform: scale(1) !important;
+    -moz-transform: scale(1) !important;
+    -ms-transform: scale(1) !important;
+    -o-transform: scale(1) !important;
+    animation: menuanim 2s forwards;
+    -webkit-animation: menuanim 2s forwards;
+}
+@keyframes menuanim {
+    100% {
+        margin-top: 10px;
+    }
 }
 /* nav part css ean */
 
@@ -97,7 +117,7 @@ nav {
     background-color: #fff;
     display: inline-block;
 }
-.banner-btn p {
+.banner-btn a {
     color: #fff;
     border: 2px solid #fff;
     display: inline-block;
@@ -106,6 +126,16 @@ nav {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     text-transform: uppercase;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
+}
+.banner-btn a:hover {
+    background-color: yellow;
+    color: purple;
+    border: 2px solid transparent;
 }
 /* banner part css ean */
 
@@ -148,10 +178,10 @@ nav {
 }
 .about-main {
     display: flex;
+    justify-content: space-between;
 }
 .about-item {
-    width: 100%;
-    margin-right: 20px;
+    width: calc(33.33% - 20px);
     position: relative;
     transition: 0.5s;
 }
@@ -315,17 +345,18 @@ nav {
     margin-bottom: 40px;
 }
 .team-item {
-    margin-right: 20px;
-    height: 500px;
+    width: calc(33.33% - 20px);
     position: relative;
 }
-.team-item img {
+.team-inner {
+    position: relative;
+}
+.team-inner img {
     width: 100%;
-    height: 100%;
+    height: 500px;
 }
 .team-over {
     position: absolute;
-    content: '';
     width: 100%;
     height: 100%;
     background-image: linear-gradient(rgba(243, 129, 129, 0.877), rgba(252, 227, 138, 0.849));
